fixed issue where the entry-table would go out of bounds

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -60,7 +60,7 @@
 
 .table-wrapper {
     overflow-y: auto;
-    max-height: 50vh;
+    max-height: 45vh;
 }
 
 .dashboard-table-list {
